manifests/application/app.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
spec:
  replicas: 5
  strategy:
    canary:
      analysis:
        templates:
        - templateName: low-error-low-latency
        startingStep: 1 # delay starting analysis run until setWeight: 20%
        args:
        - name: job
          value: app
        - name: handler
          value: ping
      steps:
      - setWeight: 20
      - pause: {duration: 40s}
      - setWeight: 40
      - pause: {duration: 40s}
      - setWeight: 60
      - pause: {duration: 40s}
      - setWeight: 80
      - pause: {duration: 40s}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: anaisurlichs/ping-pong:initial
        ports:
        - name: m-http
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
    - port: 8080
      targetPort: m-http
      protocol: TCP
      name: m-http
  selector:
    app: app
