manifests/application/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
spec:
  ports:
  - port: 8080
    targetPort: m-http
    protocol: TCP
    name: m-http
  selector:
    app: rollouts-demo
